zeroidc/vendor/wasm-bindgen-macro/ui-tests/missing-catch.stderr
error[E0277]: the trait bound `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: FromWasmAbi` is not satisfied
 --> ui-tests/missing-catch.rs:6:9
  |
6 |     pub fn foo() -> Result<JsValue, JsValue>;
  |            ^^^ the trait `FromWasmAbi` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  |
note: required by a bound in `FromWasmAbi`
 --> $WORKSPACE/src/convert/traits.rs
  |
  | / pub trait FromWasmAbi: WasmDescribe {
  | |     /// The wasm ABI type that this converts from when coming back out from the
  | |     /// ABI boundary.
  | |     type Abi: WasmAbi;
... |
  | |     unsafe fn from_abi(js: Self::Abi) -> Self;
  | | }
  | |_^ required by this bound in `FromWasmAbi`
